Added tests for zoo